Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56009

QModbusRtuSerialMaster Stack overflow crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.3, 5.7.2
    • 5.7.0
    • SerialBus: MOD Bus
    • None
    • Debian 8
    • 6bed30d5ceef1463469e37173b3ebac2cfdc2352

      if you forget call function disconnectDevice(), will crash.

        For Gerrit Dashboard: QTBUG-56009
        # Subject Branch Project Status CR V

            michaelwinkelmann Michael Winkelmann
            smallai smallai
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes