Fixed QModbusRtuSerialMaster stack overflow on close

QSerialPort::aboutToClose calls q->close() which leads to an infinite
recursion. Calling QModbusRtuSerialMaster::close() explicitly is not
necessary because when the serial port is closed,
QModbusRtuSerialMaster::close() has been invoked already in all cases.
Moreover, QSerialPort::aboutToClose asserts that serial master is
always in closing state.

Task-number: QTBUG-56009
Change-Id: If0dce93bbaa22116328b467f26c289cb58efc93f
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>